<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="false"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivuserprofile"
            style="@style/ProfileImage"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/tvusername"
                style="@style/TitleText"
                android:text="@string/user_name" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05" />

            <TextView
                android:id="@+id/tvuserdesignation"
                style="@style/NormalText"
                android:text="@string/user_designation" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_marginTop="12dp"
            android:layout_height="match_parent"
            android:id="@+id/tvusercity"
            style="@style/CityText"
            android:text="@string/user_city" />

    </LinearLayout>

    <View style="@style/ViewLine" />

</LinearLayout>